methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: type mismatch;
 found   : String("Color.blanc")
 required: java.awt.Color
  var couleur:Color="Color.blanc"
                    ^